# Blue-Archive-Asset-Downloader

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  AssetBatchConverter.py  AssetDownloader.py  AssetExtractor.py  AssetsDownloader.py  CHANGELOG.md  CharactersMapping.json  Directory.Build.targets  LICENSE  README.en.md  README.md  REFACTOR_README.md  aa  agents.md  asset_batch_converter.py  convert_dumps.py  download_assets.py  downloader.py  extract_tables.py  extractor.py  main.py  pyproject.toml  reaxtract_assets.py  requirements.txt  resource_downloader.py  resource_extractor.py  test.py  todo  version.txt
.github/workflows/: ci.yml  release-pr.yml  tag-release.yml
docs/: README.en.md  development.md  gl-eliminate-raid.md
lib/: compiler.py  console.py  diagnosis.py  downloader.py  dumper.py  encryption.py  logger.py  memory_pack.py  structure.py
regions/: cn.py  gl.py  helper.py  jp.py
scripts/: release.ps1  run-preflight.ps1  run-tests.ps1  update_changelog.py
src/ba_downloader/: __main__.py
src/ba_downloader/application/: catalog_pipeline.py  config.py
src/ba_downloader/bootstrap/: container.py  registries.py
src/ba_downloader/cli/: main.py
src/ba_downloader/domain/: exceptions.py
src/ba_downloader/extractors/: bundle.py  character.py  media.py  table.py
src/ba_downloader/legacy/: __init__.py
src/ba_downloader/lib/: compiler.py  console.py  diagnosis.py  downloader.py  dumper.py  encryption.py  logger.py  memory_pack.py  structure.py
src/ba_downloader/regions/: cn.py  gl.py  helper.py  jp.py
tests/: generated_modules.py  test_application_services.py  test_architecture_boundaries.py  test_architecture_complexity.py  test_asset_workflow.py  test_bundle_extractor.py  test_character_relation.py  test_cli.py  test_cli_error_handling.py  test_cn_extract_cli.py  test_cn_metadata_exporter.py  test_codegen_support.py  test_dump_backend.py  test_encryption.py  test_extract_service.py  test_flatbuffer_codegen.py  test_http_client.py  test_immediate_extraction.py  test_jp_server.py  test_legacy_region_adapter.py  test_logging_runtime.py  test_media_extractor.py  test_memorypack_codegen.py  test_package_manager.py  test_progress.py  test_provider_results.py  test_region_registry.py  test_resource_downloader.py  test_resource_query.py  test_schema_architecture.py  test_settings.py  test_sync_service.py  test_table_components.py  test_table_extractor.py  test_update_changelog.py  test_zip_range_reader.py
utils/: config.py  console.py  database.py  diagnosis.py  downloader.py  dumper.py  mersenne_twister.py  resource_structure.py  table_encrypt.py  util.py  utils.py
xtractor/: bundle.py  character.py  media.py  table.py
(+165 files in other folders)
